--- a/client/src/styles/abstracts/_colors.scss
+++ b/client/src/styles/abstracts/_colors.scss
@@ -3,37 +3,55 @@
 
 $white: #FFFFFF;
 
-$yellow-000: #f9f7ec;
-
-
 $violet-000: #F3F0FF;
 $violet-200: #D0BFFF;
 $violet-400: #9775FA;
 $violet-800: #6741D9;
 
+$grape-700: #b130d2;
+
 
 
 $blue-000: #E7F5FF;
 $blue-200: #A5D8FF;
+$blue-400: #4DABF7;
 $blue-600: #228BE6;
-$blue-800: #1971C2;
+$blue-800: #1284ef;
+$blue-900: #1864AB;
 
 
 
-$teal-000: #E6FCF5;
-$teal-100: #C3FAE8;
-$teal-200: #96F2D7;
+$teal-000: #beecdd;
+$teal-100: #9febd2;
+$teal-200: #87efd0;
 $teal-400: #38D9A9;
-$teal-700: #0CA678;
-$teal-900: #087F5B;
+$teal-700: #06231a;
+$teal-900: #021811;
 
 
 $lime-200: #D8F5A2;
 $lime-500: #94D82D;
+$lime-700: #74B816;
+$lime-800: #66A80F;
+
+$yellow-000: #f9faea;
+$yellow-500: #5dea9d;
 
 
-$dark-000: #C1C2C5;
-$dark-400: #373A40;
-$dark-700: #1A1B1E;
+$dark-000: #dcf9f2;
+$dark-400: #1d1d20;
+$dark-700: #1c1c1d;
 
 $black: #000000;
+
+
+// Party Colors:
+$party-1: #42214f;
+$party-2: #084962;
+$party-3: #753d57;
+$party-4: #378aab;
+$party-pale: #ebdfef;
+
+$party-bright-1: #8041ce;
+$party-bright-2: #1e9dc3;
+$party-bright-3: #4da42a;
