--- a/client/src/styles/base/_reset.scss
+++ b/client/src/styles/base/_reset.scss
@@ -8,6 +8,16 @@
 // .App {}
 .light {
   background-color: $blue-000;
+
+  .banner {
+    background-color: $blue-600;
+    color: $dark-700;
+  }
+
+  .d-flex {
+    background-color: $blue-200;
+  }
+
   h1 {
     color: $dark-700;
   }
@@ -17,7 +27,12 @@
   }
 
   .fa-sun {
-    box-shadow: 0rem 0rem .8rem .5rem $blue-600;
+    box-shadow: 0rem 0rem .8rem .5rem $blue-900;
+  }
+
+  .chat-window .chat-header {
+    background-color: $blue-900;
+
   }
 
 }
@@ -29,6 +44,16 @@
     color: $teal-000;
 
   }
+
+  .banner {
+    background-color: $teal-900;
+    color: $teal-000;
+  }
+
+  .d-flex {
+    background-color: $teal-700;
+  }
+
   .form-label {
     color: $teal-000;
 
@@ -39,84 +64,106 @@
   }
 
   .form-control {
-    background-color: $teal-000;
+    background-color: $dark-000;
 
   }
 
   .form-control:focus {
-    background-color: $teal-000;
+    background-color: $dark-000;
 
+  }
+
+  .chat-window {
+    box-shadow: 0rem 0rem .4rem .2rem $teal-000;
+  
   }
 
   .chat-window .chat-body {
-    background-color: $teal-000;
+    background-color: $dark-000;
     
   }
+
+
   input {
-    background-color: $teal-000;
+    background-color: $dark-000;
   }
 
   .fa-moon {
     box-shadow: 0rem 0rem .8rem .5rem $teal-100;
   }
 
+  .chat-window .chat-header {
+    background-color: $dark-700;
+
+  }
+
 }
 
 .party {
   animation-name: colorChange;
-  animation-duration: 5s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   @keyframes colorChange {
     0% {
-        background: $violet-800;    
+      background: $party-1;    
     }
-    20% {
-        background: $teal-700;    
+    33% {
+      background: $party-2;    
     }
-    40% {
-        background: $blue-800;    
-    }
-    60% {
-        background: $lime-500;    
-    }
-    80% {
-        background: $blue-800;    
+    66% {
+      background: $party-3;    
     }
     100% {
-        background: $violet-800;    
+      background: $party-1;    
     }
 
   }
+
+  .banner {
+    background-color: $party-1;
+    color: $party-pale;
+  }
+
+  .d-flex {
+    background-color: $party-4;
+  }
+
   h1 {
-    color: $white;
+    color: $party-pale;
   }
 
   .fa-solid {
-    color: $white;
+    color: $party-pale;
   }
 
   .form-label {
-    color: $white;
+    color: $party-pale;
 
   }
 
   .form-control {
-    background-color: $white;
+    background-color: $party-pale;
 
   }
 
   .form-control:focus {
-    background-color: $white;
+    background-color: $party-pale;
 
   }
   
 
   .chat-window .chat-body {
-    background-color: $yellow-000;
+    background-color: $party-pale;
   
   }
+
+  .chat-window .chat-header {
+    background-color: $dark-700;
+
+  }
+
   input {
-  background-color: $yellow-000;
+  background-color: $party-pale;
   }
 
   .fa-cake-candles {
@@ -135,7 +182,7 @@
     to  {
         transform:rotate(360deg);
     }
-}
+  }
 
 }
 
